plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id "io.sentry.jvm.gradle" version "4.14.1"
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // swagger 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // mapstruct 추가
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"

    // jwt 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'com.auth0:java-jwt:4.2.1'

    // 카카오톡 추가
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // 레디스 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //S3 추가
    implementation 'software.amazon.awssdk:s3:2.20.7'

    //cloudfront 추가
    implementation 'software.amazon.awssdk:cloudfront:2.20.12'

    //route53추가
    implementation 'software.amazon.awssdk:route53:2.20.12'
    implementation 'software.amazon.awssdk:core:2.20.2'
    implementation 'software.amazon.awssdk:regions:2.20.2'

    //SES 추가
    implementation 'software.amazon.awssdk:ses:2.27.8'

    //DynamoDB 추가
    implementation 'software.amazon.awssdk:dynamodb:2.28.10'
    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.28.10'

    //EventBridgeScheduler 추가
    implementation 'software.amazon.awssdk:scheduler:2.27.24'

    //HTML parser Jsoup
    implementation 'org.jsoup:jsoup:1.17.2'

    //Lambda 추가
    implementation 'software.amazon.awssdk:lambda:2.26.4'

    runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}
